--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- left side bar -->
     <aside id="left-side" class="border-r">
       <ul class="sidebar">
-        <li class="border-b"><a href="https://chanwoo-git.github.io/Grid-layout-practice/">원시 웹</a></li>
+        <li class="border-b"><a href="https://chanwoo-git.github.io/farsighted-web/">원시 웹</a></li>
         <li class="border-b"><a href="#">Page2</a></li>
         <li class="border-b"><a href="#">Page3</a></li>
         <li class="border-b"><a href="#">Page4</a></li>
